refactor: 빌더 메서드 모듈화